Fix sticky header alignment on ML live page.

--- a/assets/scss/ml-live.scss
+++ b/assets/scss/ml-live.scss
@@ -64,4 +64,6 @@
 	display: block;
 	position: static;
 	transform: translateY(0);
+	margin-top: 0;
+	border-top: 0;
 }
